# sourcier

./: Cargo.toml  README.md
.github/workflows/: release.yml
sourcier-core/: CHANGELOG.md  Cargo.toml
sourcier-core/src/: clo.rs  fid.rs  lib.rs  sfm.rs  sfp.rs  tests.rs
sourcier-core/src/snapshots/: sourcier_core__tests__basic__core_functionality__basic_operations.snap  sourcier_core__tests__basic__core_functionality__position_encoding.snap  sourcier_core__tests__comprehensive__source_files_map__basic_file_operations.snap  sourcier_core__tests__comprehensive__source_files_map__file_id_uniqueness.snap  sourcier_core__tests__comprehensive__source_files_map__position_creation.snap  sourcier_core__tests__core_functionality__position_encoding.snap  sourcier_core__tests__view__view_tests__multi_line_view.snap
