[package]
name = "sourcier-core"
version = "0.1.0"
edition = "2024"

[features]
rt-feedback = []
serde = ["dep:serde"]
view = []
default = ["view", "rt-feedback", "serde"]
[dev-dependencies]
insta = { workspace = true }
trybuild = { workspace = true }
[dependencies]
memchr = { workspace = true }
serde = { workspace = true, optional = true }
